# system-monitor

./: .gitignore  CMakeLists.txt  README.md  System-Moniter.cpp  System-Moniter.slnx  System-Moniter.vcxproj  System-Moniter.vcxproj.filters
System-Moniter/x64/Debug/: System-Moniter.exe.recipe  vc143.idb
System-Moniter/x64/Debug/System-Moniter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  System-Moniter.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
config/: config.ini
docs/: architecture.md
include/: AlertSystem.h  Config.h  CpuMonitor.h  DiskMonitor.h  Display.h  Logger.h  MemoryMonitor.h  PerformanceStats.h  ProcessManager.h  ReportGenerator.h  SystemInfo.h
reports/: README.md
scripts/: build.sh
src/: AlertSystem.cpp  Config.cpp  CpuMonitor.cpp  DiskMonitor.cpp  Display.cpp  Logger.cpp  MemoryMonitor.cpp  PerformanceStats.cpp  ProcessManager.cpp  ReportGenerator.cpp  SystemInfo.cpp  main.cpp
src/core/: MonitorWorker.cpp  MonitorWorker.h
src/ui/: ChartWidget.cpp  ChartWidget.h  MainWindow.cpp  MainWindow.h  resources.qrc  theme.qss
x64/Debug/config/: config.ini
